# graphics-programming

./: CMakeLists.txt  main.cpp  run.sh
headers/: EBO.h  VAO.h  VBO.h  shaderClass.h
src/: EBO.cpp  VAO.cpp  VBO.cpp  main.cpp  shaderClass.cpp
